--- a/弹球.md
+++ b/弹球.md
@@ -1,11 +1,70 @@
 ### 12-22
 #### 思考
+A给球归为形状类 B在形状类中，有颜色，半径，坐标，移动距离
 ###### 
 #### 归纳
 ##### 面向对象编程
-###### -类 就是把对象归类，方便我们教计算机做事 -实例 就是在分类模板里，通过构造函数完成
+###### -类 就是把对象归类，方便我们教计算机做事 -实例 就是在分类模板里，通过构造函数完成 -多态 每个类的方法通过相同函数表现不同效果 -重写(重载) 在多态里的子类们干的事
+ ![Alt text](img/01.png)
+ ###### 这里演示的是一个类的伪代码
+###### -封装 命令计算机做事
+###### -在构造函数完成的对象中，另一个对象的方法通过Object.assign()绑定到这个对象的prototype属性上
+
+```
+class Shape {
+  x;y;vx;vy;
+
+  constructor(x,y,color,vx,vy,radious) {
+    this.x = x;
+    this.y = y;
+    this.vx = vx;
+    this.vy = vy;
+  }
+
+  introduceSelf() {
+    console.log(`Hi! I'm ${this.x}`);
+  }
+  
+}
+class Ball extends Shape{
+  color;radious;
+
+  constructor(x,y,color,vx,vy,radious) {
+    super(x,y,vx,vy);
+    this.color = color;
+    this.radious = radious;
+  }
+
+  introduceSelf() {
+    console.log(
+      `My name is ${this.x}, and I will be your ${this.color} professor.`,
+    );
+  }
+  grade(paper) {
+    const grade = Math.floor(Math.random() * (5 - 1) + 1);
+    console.log(grade);
+  }
+  #somePrivateMethod() {
+    console.log("You called me?");
+  }
+  somePublicMethod() {
+    this.#somePrivateMethod();
+  }
+}
+
+const giles = new Ball ("1","","2");
+
+giles.introduceSelf(); 
+giles.grade("paper");
+giles.somePublicMethod(); 
+```
+##### 上面我们把球归为形状，通过球的方法做了一个介绍，一个计算，以及通过球的另一个方法访问球的封装的方法
 #####
 #### 总结 
 ###### 在vscode中，安装markdown edge-tools
 ###### 了解在面向对象编程中 -类和实例 继承 封装
 ###### 学会类与实例基本概念，学会构造函数完成实例
+###### 原型链和继承的区别 -委派 就是计算机出厂自带对象不用教就会做事
+###### 学会面向对象编程基本概念
+###### 学会使用面向对象编程
+
