--- a/弹球.md
+++ b/弹球.md
@@ -307,10 +307,122 @@ giles.somePublicMethod();
 #### 思考
 ###### 怎么给圆形归类？
 A给形状类坐标属性 形状对象的构造器  形状位置方法 B儿子球类半径，颜色，画球方法 B通过窗口对象的绘制方法绘制球类动画 
-###### 怎么告诉计算机我要画100个大小不等颜色不等的圆？
+###### 怎么告诉计算机我要画25个大小不等颜色不等的球？
+A给球队分配为数组 B在条件循环中，完成球对象 C然后通过球队的方法往球队里添加 
 #### 归纳
 ```
+class Shape {
+  x;
+  y;
+  vx;
+  vy;
+  constructor(x, y,vx,vy) {
+    this.x = x;
+    this.y = y;
+    this.vx = vx;
+    this.vy = vy;
+  }
+  introduceShape() {
+    console.log(` this position is: (${this.x}, ${this.y} ),this moveLength is: (${this.vx}, ${this.vy}) `);
+  }
+}
 
 ```
+###### 这里是形状类
+class Ball extends Shape {
+  radious;color;
+  constructor(x,y,vx,vy,radious,color){
+    super(x,y,vx,vy);
+    this.radious = radious;
+    this.color =color;
+  }
+  darw(){
+    ctx.beginPath();
+    ctx.arc(this.x,this.y,this.radious,0,Math.PI*2,);
+    ctx.closePath();
+    ctx.fillStyle = this.color;
+    ctx.fill()
+  }
+   updated() {
+    if(this.x+this.radious>width){
+      this.vx = -this.vx;
+    }
+    if(this.x-this.radious<=0){
+      this.vx = -this.vx;
+    }
+    if(this.y+this.radious>width){
+      this.vy = -this.vy;
+    }
+    if(this.y-this.radious<=0){
+      this.vy = -this.vy;
+    }
+    
+  this.x += this.vx;
+  this.y += this.vy;
+  }
+  introduceShape() {
+    console.log(` this position is: (${this.x}, ${this.y} ),this moveLength is: (${this.vx}, ${this.vy}) `);
+  }
+
+}
+###### 这里是继承形状类的球类，在球类中，有画球方法和改变球位置的方法，上面有个矢量反转，让球一直在屏幕里
+
+```
+const ballarr = [];
+while(ballarr.length<25){
+  let size = random(10, 20);
+  let ball = new Ball(
+    // 为避免绘制错误，球至少离画布边缘球本身一倍宽度的距离
+    random(0 + size, width - size),
+    random(0 + size, height - size),
+    random(-7, 7),
+    random(-7, 7),
+    size,
+    randomColor(),
+  );
+  ballarr.push(ball);
+  console.log(ballarr.push(ball));
+}
+```
+###### 这里用了While条件循环，先捏球，再网球队里添加了25个球
+```
+// 生成随机数的函数
+
+function random(min, max) {
+  const num = Math.floor(Math.random() * (max - min)) + min;
+  return num;
+}
+
+//生成随机颜色
+function randomColor() {
+  return (
+    "rgb(" +
+    random(0, 255) +
+    ", " +
+    random(0, 255) +
+    ", " +
+    random(0, 255) +
+    ")"
+  );
+}
+```
+###### 这里随机坐标，随机半径，随机颜色都是整数，通过Math对象的floor方法取整，在方法中放入区间
+```
+//绘制球形动画
+function loop() {
+  ctx.fillStyle = "rgba(0, 0, 0, 0.25)";
+  ctx.fillRect(0, 0, width, height);
+ for(let i=0;i<ballarr.length;i++){
+   ballarr[i].darw();
+   ballarr[i].updated();
+ }
+ window.requestAnimationFrame(loop);
+}
+
+window.requestAnimationFrame(loop);
+```
+###### 这里是绘制球形动画 绘制函数中，通过for遍历循环球队，绘制每个球
 #### 总结
+##### 完成弹球的动画
+##### 学会while条件循环 for循环
 
