--- a/弹球.md
+++ b/弹球.md
@@ -422,7 +422,12 @@ function loop() {
 window.requestAnimationFrame(loop);
 ```
 ###### 这里是绘制球形动画 绘制函数中，通过for遍历循环球队，绘制每个球
+ballarr.forEach(element => {
+  element.draw();
+  element.updated();
+});
+###### 上面通过foreach遍历循环球队，绘制每个球
 #### 总结
 ##### 完成弹球的动画
-##### 学会while条件循环 for循环
+##### 学会while条件循环 for循环 foreach循环
 
