--- a/弹球.md
+++ b/弹球.md
@@ -431,3 +431,117 @@ ballarr.forEach(element => {
 ##### 完成弹球的动画
 ##### 学会while条件循环 for循环 foreach循环
 
+### 12-31
+#### 思考
+###### 怎么完成恶魔圈呢？
+A在恶魔圈子类中，有画恶魔圈方法，有让恶魔圈待屏幕里的方法，有恶魔圈吃小球的方法 B完成恶魔圈类的实例C添加绘制恶魔圈对象动画 
+###### 怎么完成计数器呢？
+A给计数器分配一个选择器吗
+#### 归纳
+```
+class EvilCircle extends Shape {
+  radious=10;color="white";
+  constructor(x,y,vx,vy,exists){
+    super(x,y,20,20,exists);
+  }
+  draw() {
+    ctx.strokeStyle = this.color;
+    ctx.beginPath();
+    ctx.lineWidth = 3;
+    ctx.arc(this.x, this.y, this.radious, 0, Math.PI * 2);
+    ctx.closePath();
+   ctx.stroke();
+  }
+}
+```
+###### 这里我用Evilircle类演示，半径颜色分配右边操作数，构造器的参数在上面，画恶魔圈方法这里是画了一个白色边的圆
+```
+  checkBounds(){
+    if (this.x + this.radious > width) {
+      this.x -= this.radious;
+    }
+    if (this.x - this.radious <= 0) {
+      this.x += this.radious;
+    }
+    if (this.y + this.radious > height) {
+      this.y -= this.radious;
+    }
+    if (this.y - this.radious <= 0) {
+      this.y += this.radious;
+    }
+  }
+  ```
+  ###### 这里方法是让恶魔圈一直在屏幕里
+  ```
+  setControls(){
+    window.onkeydown = (e) => {
+      switch (e.key) {
+        case "a":
+          this.x -= this.vx;
+          break;
+        case "d":
+          this.x += this.vx;
+          break;
+        case "w":
+          this.y -= this.vy;
+          break;
+        case "s":
+          this.y += this.vy;
+          break;
+      }
+    };
+  }
+  ```
+  ###### 这里方法是让键盘控制恶魔圈
+  ```
+  collisionDetect(ballarr){
+    ballarr.forEach((element,index) => {
+      if (element.exists) {
+        const dx = this.x - element.x;
+        const dy = this.y - element.y;
+        const distance = Math.sqrt(dx * dx + dy * dy);
+
+        if (distance < this.radious + element.radious) {
+         ballarr.splice(index,1)
+        }
+      }
+    });
+  }
+  ```
+  ###### 这里方法是让恶魔圈吃掉小球，这里我放了index,就是在恶魔圈中，让每个还存在的小球都做一次碰撞检测，通过小球数组对象的splice()方法移除该小球
+  ```
+  //完成恶魔圈类的实例
+  const circle = new EvilCircle(200,300,"","",true)
+  console.log(circle)
+//恶魔圈对象的键盘控制方法
+circle.setControls();
+```
+###### 这里是通过new 恶魔圈实例操控恶魔圈
+
+```
+//绘制球形动画
+function loop() {
+  ctx.fillStyle = "rgba(0, 0, 0, 0.25)";
+  ctx.fillRect(0, 0, width, height);
+  circle.draw();
+  circle.checkBounds();
+  circle.collisionDetect(ballarr);
+  
+    ballarr.forEach((element) => {
+      if(element.exists){
+        element.draw();
+        element.updated();
+        element.collisionDetect(ballarr);
+      }
+    });
+  
+  window.requestAnimationFrame(loop);
+}
+
+window.requestAnimationFrame(loop);
+  ```
+###### 这里在绘制函数里添加了一个恶魔圈的绘制
+#### 总结
+###### 完成弹球-恶魔圈动画
+###### 掌握数组对象的splice()方法
+
